# eutils-logger-v2

./: .gitignore  README.md  config.yml  eutils.py  eutils_logger.py  main.py  pyproject.toml  requirements.txt  setup.bat
.github/workflows/: ci.yml  release.yml
other/: __init__.py  eutils.py  eutils_logger.py
